[project]
name = "systembolaget-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for interacting with Systembolaget's APIs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Fredrik Storm", email = "fredrik@fldc.se" }
]
license = { text = "MIT" }
keywords = ["mcp", "systembolaget", "api", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "black>=25.11.0",
    "mypy>=1.18.2",
    "ruff>=0.14.5",
]

[project.urls]
Homepage = "https://github.com/fldc/systembolaget-mcp"
Documentation = "https://github.com/fldc/systembolaget-mcp#readme"
Repository = "https://github.com/fldc/systembolaget-mcp"
Issues = "https://github.com/fldc/systembolaget-mcp/issues"

[project.scripts]
systembolaget-mcp = "systembolaget_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Use py-modules for single-file modules (not packages)
py-modules = ["systembolaget_mcp"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Test files are in the root directory (test_*.py, *_test.py)
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
